envoy-config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/cluster/1"
                route:
                  cluster: cluster1
              - match:
                  prefix: "/cluster/2"
                route:
                  cluster: cluster2
              - match:
                  prefix: "/"
                route:
                  cluster: cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: cluster
    connect_timeout: 0.25s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.aggregate
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
        clusters:
        - cluster1
        - cluster2
  - name: cluster1
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    outlier_detection:
      max_ejection_percent: 100
    load_assignment:
      cluster_name: cluster1
      policy:
        overprovisioning_factor: 10000000
      endpoints:
      - priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8000
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8001
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8002
      - priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8003
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8004
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8005
  - name: cluster2
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    outlier_detection:
      max_ejection_percent: 100
    load_assignment:
      cluster_name: cluster2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 9000
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 19000
